# danmaku-tool

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  start.bat  status.bat  stop.bat
docs/: session-burn-fix-plan.md
scripts/: awaker.ps1  check_env.py
src/danmaku_tool/: __init__.py  config.py  deps.py  main.py  utils.py
src/danmaku_tool/api/: ass.py  burn.py  files.py  health.py  sessions.py  tasks.py
src/danmaku_tool/core/: ass_generator.py  burner.py  capabilities.py  font_checker.py
src/danmaku_tool/db/: pool.py  tasks_dao.py
src/danmaku_tool/db/migrations/: 001_init.sql
src/danmaku_tool/models/: task.py
src/danmaku_tool/queue/: task_queue.py  worker.py
src/danmaku_tool/static/css/: style.css
src/danmaku_tool/static/js/: batch_burn.js  burn.js  file_picker.js  progress.js  settings.js
src/danmaku_tool/templates/: base.html  batch_burn.html  burn.html  index.html  settings.html  task_detail.html
tests/: conftest.py  test_api_burn.py  test_api_files.py  test_api_sessions.py  test_api_tasks.py  test_ass_generator.py  test_burner.py  test_capabilities.py  test_font_checker.py  test_main.py  test_task_queue.py
