[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/danmaku_tool"]

[project]
name = "danmaku-tool"
version = "0.1.0"
description = "弹幕压制工具 — ASS 字幕生成 + FFmpeg 视频压制 (NVENC/CPU)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "aiosqlite>=0.20",
    "httpx>=0.28",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
danmaku = "danmaku_tool.main:cli"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["danmaku_tool"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
